[workspace]
resolver = "2"
members = [
	"loader",
	"ffi",
]

[profile.release]
opt-level = "z"
#opt-level = 2
#codegen-units = 1
#debug = true
panic = "abort"
#lto = "thin"
lto = true

[patch."https://github.com/zerthox/gw2-mumble-rs"]
gw2_mumble = { git = "https://github.com/arcnmx/gw2-mumble-rs" }

[patch."https://github.com/zerthox/arcdps-rs"]
arcdps = { git = "https://github.com/arcnmx/arcdps-rs" }

[patch."https://github.com/zerthox/nexus-rs"]
nexus = { git = "https://github.com/arcnmx/nexus-rs" }

[patch.crates-io]
#arcdps-imgui = { ... }
#arcdps-imgui-sys = { ... }
