[package]
name = "arcffi"
authors = [ "arcnmx" ]
version = "0.1.0"
edition = "2021"

description = "asdf"
keywords = []

homepage = "https://github.com/arcnmx/arcloader"
repository = "https://github.com/arcnmx/arcloader"
#readme
license = "MIT"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = [
	"cfg(todo)",
	"cfg(unnecessary)",
	"cfg(msrv, values(any()))",
] }

[dependencies]
windows-strings-03 = { package = "windows-strings", version = "0.3", optional = true }
windows-strings-04 = { package = "windows-strings", version = "0.4", optional = true }
windows-core-060 = { package = "windows-core", version = "0.60", default-features = false, optional = true }
windows-core-061 = { package = "windows-core", version = "0.61", default-features = false, optional = true }
windows-060 = { package = "windows", version = "0.60", default-features = false, optional = true }
windows-061 = { package = "windows", version = "0.61", default-features = false, optional = true }

[features]
default = [
	"winerror",
	"std",
]
windows-core-060 = [
	"windows-core",
	"dep:windows-core-060",
	"windows-strings-03",
]
windows-core-061 = [
	"windows-core",
	"dep:windows-core-061",
	"windows-strings-04",
]
windows-core = []
windows-060 = [
	"windows",
	"dep:windows-060",
	"windows-core-060",
]
windows-061 = [
	"windows",
	"dep:windows-061",
	"windows-core-061",
]
windows = []
com = [
	"std",
	"windows-060?/Win32_System_Com",
	"windows-061?/Win32_System_Com",
]
dxgi = [
	"windows-060?/Win32_Graphics_Dxgi_Common",
	"windows-061?/Win32_Graphics_Dxgi_Common",
]
library = [
	"windows-060?/Win32_System_LibraryLoader",
	"windows-061?/Win32_System_LibraryLoader",
]
wic = [
	"com",
	"windows-060?/Win32_Graphics_Imaging",
	"windows-061?/Win32_Graphics_Imaging",
]
winerror = [
	"windows-060?/Win32_System_Diagnostics_Debug",
	"windows-061?/Win32_System_Diagnostics_Debug",
]
std = [
	"windows-core-060?/std",
	"windows-core-061?/std",
]
unwind = []
unstable = []
