[package]
name = "arcloader-mumblelink"
authors = [ "arcnmx" ]
version = "0.1.0"
edition = "2021"

description = "Nope"
keywords = []

homepage = "https://github.com/arcnmx/arcloader"
repository = "https://github.com/arcnmx/arcloader"
#readme
license = "MIT"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(todo)'] }

[dependencies]
arcffi = { path = "../ffi", default-features = false }
nexus = { git = "https://github.com/zerthox/nexus-rs", default-features = false, features = ["mumble"], optional = true }
gw2_mumble = { git = "https://github.com/zerthox/gw2-mumble-rs", default-features = false, optional = true }
serde = { version = "1", features = ["derive"], optional = true }
serde_json = { version = "1", optional = true }
log = { version = "0.4", optional = true }

[features]
default = [
	"identity",
	"gw2_mumble",
	#"log",
]
identity = [
	"serde",
	# TODO: remove soon
	"nexus",
]
serde = [
	"dep:serde",
	"dep:serde_json",
	#"nexus?/serde",
	"gw2_mumble?/json",
]
log = [
	"dep:log",
]
